# kaggle-nemotron-equation-symbolic

./: .gitignore  README.md  main.py  pyproject.toml
docs/: index.html  solver_results.parquet
rust/alice_sovler_helper/: Cargo.toml
rust/alice_sovler_helper/src/: lib.rs
src/: solve_all_symbolic.py  solver_eq_symbolic.py
