[project]
name = "kaggle-nemotron-equation-symbolic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "maturin>=1.13.1",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
]

[build-system]
requires = ["maturin>=1.13.1"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/alice_sovler_helper/Cargo.toml"
